[package]
name = "venom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
retour = "0.3.1"
canny = { git = "https://github.com/hbgda/canny.git", rev = "fecabf5" }

[dependencies.windows]
version = "0.48.0"
features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Foundation", "Win32_System_SystemServices", "Win32_Security", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_Debug" ]
